--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -94,6 +94,17 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
         <!--FastDFS依赖-->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version> <!-- Use the appropriate version -->
+        </dependency>
+        <!-- google kaptcha依赖 -->
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
+        </dependency>
 
 
         <dependency>
