--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>kaptcha</artifactId>
             <version>0.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-spring-boot-starter</artifactId>
+            <version>4.4.0</version>
+        </dependency>
 
 
         <dependency>
