--- a/yeb-mail/src/main/resources/config/application.yml
+++ b/yeb-mail/src/main/resources/config/application.yml
@@ -16,6 +16,21 @@ spring:
     password: guest
     host: localhost
     port: 5672
+    listener:
+      simple:
+        acknowledge-mode: manual
 
   main:
     allow-bean-definition-overriding: true
+
+  redis:
+    timeout: 10000ms
+    host: localhost
+    port: 6379
+    database: 0
+    lettuce:
+      pool:
+        max-active: 1024
+        max-wait: 10000ms
+        max-idle: 200
+        min-idle: 5
